<resources>
    <string name="app_name">Chord Player</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save progression</string>
    <string name="action_load">Load progression</string>
    <!-- Strings used for fragments for navigation -->

    <string name="input_save_title">Save progressione</string>
    <string name="input_save_hint"> </string>
    <string name="input_save_desc">Note: overwrites existing progressions with same name. </string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="button_add">Add</string>
    <string name="button_play">Play</string>
    <string name="button_remove">Remove</string>
    <string name="previous">Previous</string>
    <string name="toggleButton_flat">♭</string>
    <string name="button_change_chord">Edit</string>
    <string name="setBPM_autofillHint">0</string>
    <string name="bpm_text">BPM</string>
    <string name="metronome_text">Metronome</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="element_text">HEJ</string>

    <string-array name="chord_lengths">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
    </string-array>

</resources>