<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pudkipz.chordplayer.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:actionLayout="@layout/action_save_window"
        android:orderInCategory="102"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load"
        android:orderInCategory="101"
        android:title="@string/action_load"
        app:showAsAction="never" />
</menu>
